
MANPAGES = spindly_phys_cleanup.3 spindly_phys_demux.3			\
spindly_phys_incoming.3 spindly_phys_init.3 spindly_phys_outgoing.3	\
spindly_phys_sent.3 spindly_phys_settings.3 spindly_stream_ack.3	\
spindly_stream_close.3 spindly_stream_data.3 spindly_stream_getphys.3	\
spindly_stream_headers.3 spindly_stream_new.3 spindly-errors.3		\
spindly_version.3 spindly_stream_window.3 template.3

EXTRA_DIST = resources API HACKING $(MANPAGES)

all:
	cd .. && doxygen Doxyfile
